# af_utils

./: .gitignore  README.md  performance_tester.py  pyproject.toml
docs/source/: bsicplotter.rst  conf.py  index.rst  performancetest.rst
docs/source/notebooks/: exampleusage.ipynb
docs_html/doctrees/: index.doctree
docs_html/doctrees/_autosummary/: bsicplotter.BSICPlotter.doctree  bsicplotter.doctree  mpl_bsic.BSIC_FONT_FAMILY.doctree  mpl_bsic.DFT_COLOR_CYCLE.doctree  mpl_bsic.DFT_FONT_SIZE.doctree  mpl_bsic.DFT_TITLE_STYLE.doctree  mpl_bsic.apply_BSIC_style.doctree  mpl_bsic.doctree  performance_tester.PerformanceMetrics.doctree  performance_tester.doctree  performance_tester.performance_test.doctree  performance_tester.test.doctree
docs_html/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs_html/html/_autosummary/: bsicplotter.BSICPlotter.html  bsicplotter.html  mpl_bsic.BSIC_FONT_FAMILY.html  mpl_bsic.DFT_COLOR_CYCLE.html  mpl_bsic.DFT_FONT_SIZE.html  mpl_bsic.DFT_TITLE_STYLE.html  mpl_bsic.apply_BSIC_style.html  mpl_bsic.html  performance_tester.PerformanceMetrics.html  performance_tester.html  performance_tester.performance_test.html  performance_tester.test.html
docs_html/html/_modules/: bsicplotter.html  index.html  mpl_bsic.html  performance_tester.html
src/: __init__.py  bsicplotter.py  ftrss.py  mpl_bsic.py  performance_tester.py
src/deprecated/: bsicplotter.py
tests/: performance_tester.test.py  plotter2.test.py  plotter3.test.py  test.py  testgraph2.py
(+13 files in other folders)
