[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utils_af"
version = "0.0.1"
authors = [
  { name="Andrea Franceschini", email="andrea.franceschini03@gmail.com" },
]
description = "Utils Packages"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
